# l2sync

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: binance.rs  book.rs  lib.rs  main.rs  sync.rs
tests/: parsing.rs  replay_binance.rs  sequencing.rs
tests/fixtures/: binance_btcusdt_diffs.ndjson  binance_btcusdt_snapshot.json  binance_btcusdt_verify.json
