[package]
name = "l2sync"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Multi-exchange crypto L2 order book aggregator with snapshot+diff resync"
repository = "https://github.com/groovg/l2sync"
readme = "README.md"
keywords = ["orderbook", "crypto", "market-data", "websocket", "hft"]
categories = ["asynchronous", "network-programming", "finance"]

[dependencies]
futures-util = { version = "0.3.32", default-features = false, features = ["std", "sink"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }

[profile.release]
lto = true
codegen-units = 1
